src/test/deca/syntax/invalid/object/class_new_extends.deca
//  Description :
// 
//      Test syntaxiquement incorrect de la déclaration d'une classe nommé extends
// 
//  Résultats : 
// 
//      N/A
// 
//  Historique :
// 
//      Créé le 13/06 par gl03

class extends {

}

{
    extends A = new extends;
}